--- a/lib/main_app.html
+++ b/lib/main_app.html
@@ -7,6 +7,17 @@
 <link rel="import" href="../../packages/polymer/polymer.html">
 
 <link rel="import" href="../../packages/paper_elements/paper_input.html">
+<link rel="import" href="../../packages/paper_elements/paper_button.html">
+<link rel="import" href="../../packages/core_elements/core_toolbar.html">
+<link rel="import" href="../../packages/paper_elements/paper_tabs.html">
+<link rel="import" href="../../packages/paper_elements/paper_tab.html">
+<link rel="import" href="../../packages/core_elements/core_scaffold.html">
+<link rel="import" href="../../packages/core_elements/core_header_panel.html">
+<link rel="import" href="../../packages/core_elements/core_menu.html">
+<link rel="import" href="../../packages/core_elements/core_pages.html">
+<link rel="import" href="../../packages/core_elements/core_item.html">
+<link rel="import" href="../../packages/paper_elements/paper_toast.html">
+
 
 <polymer-element name="main-app">
   <template>
@@ -16,16 +27,49 @@
       }
     </style>
 
-    <paper-input label="Company" value="{{contactData['company']}}"></paper-input>
-    <paper-input label="First Name" value="{{contactData['firstName']}}"></paper-input>
-    <paper-input label="Last Name" value="{{contactData['lastName']}}"></paper-input>
-    <p></p>
-    <paper-input label="Address"  value="{{contactData['address1']}}"></paper-input>
-    <paper-input label="Address 2"  value="{{contactData['address2']}}"></paper-input>
-    <p>
-      <paper-button raised="Save" on-click="{{postContact}}">Save</paper-button>
-    </p>
 
+  <core-scaffold>
+
+    <core-header-panel navigation flex>
+      <core-toolbar id="navheader">
+        <span>Menu</span>
+      </core-toolbar>
+      <core-menu id="mnu-main">
+        <core-item label="List" on-click="{{selectTab}}" id="btn-list"></core-item>
+        <core-item label="Edit" on-click="{{selectTab}}" id="btn-edit"></core-item>
+      </core-menu>
+    </core-header-panel>
+
+    <span tool>Contacts</span>
+
+    <div class="content">
+      <core-pages selected="{{selected}}">
+          <div>Contacts</div>
+          <div>
+              <paper-input label="Company" value="{{contactData['company']}}"></paper-input>
+              <paper-input label="First Name" value="{{contactData['firstName']}}"></paper-input>
+              <paper-input label="Last Name" value="{{contactData['lastName']}}"></paper-input>
+              <p></p>
+              <paper-input label="Email" type="email" on-input="{{inputHandler}}" value="{{contactData['email']}}"></paper-input>
+              <paper-input label="Phone"  value="{{contactData['telephone']}}"></paper-input>
+              <paper-input label="Mobile"  value="{{contactData['mobile']}}"></paper-input>
+              <p></p>
+              <paper-input label="Address"  value="{{contactData['address1']}}"></paper-input>
+              <paper-input label="Address 2"  value="{{contactData['address2']}}"></paper-input>
+              <p></p>
+              <paper-input label="City"  value="{{contactData['city']}}"></paper-input>
+              <paper-input label="State"  value="{{contactData['state']}}"></paper-input>
+              <paper-input id="zip" label="Zip" value="{{contactData['zip']}}" 
+                validate="^[0-9]*$" error="Input is not a number!" required></paper-input>
+              <p>
+                  <paper-button raised on-click="{{postContact}}">
+                      Save</paper-button>
+                  <paper-toast id="save-toast" text=""></paper-toast>
+          </div>
+          <div>Page 3</div>
+      </core-pages>
+  </div>
+</core-scaffold>
 
   </template>
   <script type="application/dart" src="main_app.dart"></script>
