--- a/web/index.html
+++ b/web/index.html
@@ -36,7 +36,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<body unresolved>
+<body fullbleed vertical layout unresolved>
 
   <main-app></main-app>
 
